retrieve_ENO_DEV1/objects/Weapon__c.object
<CustomObject>
    <fields>
        <fullName>Ancillaries__c</fullName>
        <inlineHelpText>(eg 1 x Magazine, Sling)</inlineHelpText>
        <label>Ancillaries</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Calibre__c</fullName>
        <inlineHelpText>(eg 9mm)</inlineHelpText>
        <label>Calibre</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Other__c</fullName>
        <label>Category Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>(eg Semi-Automatic Pistol)</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Semi-Automatic Pistol</fullName>
                </value>
                <value>
                    <fullName>Revolver</fullName>
                </value>
                <value>
                    <fullName>Bolt-Action Rifle</fullName>
                </value>
                <value>
                    <fullName>Assault Rifle</fullName>
                </value>
                <value>
                    <fullName>Shotgun</fullName>
                </value>
                <value>
                    <fullName>Sub-Machine Gun</fullName>
                </value>
                <value>
                    <fullName>Under-Lever Rifle</fullName>
                </value>
                <value>
                    <fullName>Breech-loading Rifle</fullName>
                </value>
                <value>
                    <fullName>Flintlock Rifle</fullName>
                </value>
                <value>
                    <fullName>Matchlock Musket</fullName>
                </value>
                <value>
                    <fullName>Caplock Rifle</fullName>
                </value>
                <value>
                    <fullName>Flintlock Pistol</fullName>
                </value>
                <value>
                    <fullName>Matchlock Pistol</fullName>
                </value>
                <value>
                    <fullName>Caplock Pistol</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <label>Colour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Location_Last_Updated__c</fullName>
        <label>Date Location Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>(eg US Army Issue Pistol)</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Era_Other__c</fullName>
        <label>Era Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Era__c</fullName>
        <inlineHelpText>(eg Late 20th Century)</inlineHelpText>
        <label>Era</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre 19th Century</fullName>
                </value>
                <value>
                    <fullName>Regency (Early 1800s)</fullName>
                </value>
                <value>
                    <fullName>Victorian (Late 1800s)</fullName>
                </value>
                <value>
                    <fullName>Western</fullName>
                </value>
                <value>
                    <fullName>Edwardian (Early 1900s)</fullName>
                </value>
                <value>
                    <fullName>WW1</fullName>
                </value>
                <value>
                    <fullName>WW2</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
                <value>
                    <fullName>Late 20th Century</fullName>
                </value>
                <value>
                    <fullName>Early 21st Century</fullName>
                </value>
                <value>
                    <fullName>Futuristic</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Other_please_specify__c</fullName>
        <label>If Other please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IF(NOT(ISBLANK(Image_URL__c)), IMAGE(Image_URL__c, TEXT(Weapon__c)),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_mm__c</fullName>
        <label>Length (mm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coliseum</fullName>
                </value>
                <value>
                    <fullName>Stonelake</fullName>
                </value>
                <value>
                    <fullName>In Rehearsal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <inlineHelpText>(eg Beretta)</inlineHelpText>
        <label>Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <inlineHelpText>(eg Tokoyo Marui)</inlineHelpText>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <inlineHelpText>(eg Metal)</inlineHelpText>
        <label>Material</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <inlineHelpText>(eg M9)</inlineHelpText>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Please_Specify__c</fullName>
        <label>Other - Please Specify</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picture_Filename__c</fullName>
        <label>Picture Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <inlineHelpText>Kitchen - ie Chef’s knife / Boning Knife / Cleaver / Bread Knife / Paring / Carving
Work - ie Diver / Electrician / Carpenter / Hunting / Scalpel / Multi-tool / Machete / Balisong / Pocket / Survival / Kukri
Combat - ie Trench / Bayonet / Tactical
Recreational - ie Throwing knives / Throwing Stars</inlineHelpText>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Kitchen</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Combat</fullName>
                </value>
                <value>
                    <fullName>Recreational</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_Other__c</fullName>
        <label>Type Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>(eg Airsoft (Gas))</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Replica (moving)</fullName>
                </value>
                <value>
                    <fullName>Replica (non-moving)</fullName>
                </value>
                <value>
                    <fullName>Rubber (soft)</fullName>
                </value>
                <value>
                    <fullName>Rubber (hard)</fullName>
                </value>
                <value>
                    <fullName>Blank firing (TV)</fullName>
                </value>
                <value>
                    <fullName>Blank firing (SV)</fullName>
                </value>
                <value>
                    <fullName>Blank firing (FV)</fullName>
                </value>
                <value>
                    <fullName>Airsoft (Spring)</fullName>
                </value>
                <value>
                    <fullName>Airsoft (Gas)</fullName>
                </value>
                <value>
                    <fullName>Airsoft (Electrical)</fullName>
                </value>
                <value>
                    <fullName>Deactivated</fullName>
                </value>
                <value>
                    <fullName>Section 1 Firearm</fullName>
                </value>
                <value>
                    <fullName>Section 2 Firearm</fullName>
                </value>
                <value>
                    <fullName>Section 5 Firearm</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weapon_Type__c</fullName>
        <label>Weapon Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asian (eg Katana)</fullName>
                </value>
                <value>
                    <fullName>Egyptian (eg Khopesh)</fullName>
                </value>
                <value>
                    <fullName>Foils/Rapiers (eg Epee)</fullName>
                </value>
                <value>
                    <fullName>Two-handed - Incl Claymore &amp; Flamberges</fullName>
                </value>
                <value>
                    <fullName>Longswords - Incl Bastard Swords</fullName>
                </value>
                <value>
                    <fullName>Short Swords</fullName>
                </value>
                <value>
                    <fullName>Scimitars/Falchions/Sabres</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weapon__c</fullName>
        <label>Weapon</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gun</fullName>
                </value>
                <value>
                    <fullName>Knife</fullName>
                </value>
                <value>
                    <fullName>Dagger</fullName>
                </value>
                <value>
                    <fullName>Sword</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Weapon</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Calibre__c</columns>
        <columns>Category__c</columns>
        <columns>Colour__c</columns>
        <columns>Description__c</columns>
        <columns>Era__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Weapon Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weapons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>